# vzglyd-clock

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml  project.yml
assets/: world.glb
src/: clock_shader.wgsl  lib.rs
