[package]
name = "clock_slide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vzglyd-slide = { path = "../lume-slide" }
glam = "0.29"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
once_cell = "1"
postcard = { version = "1", features = ["alloc", "use-std"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
