[package]
name = "clock_slide"
version = "0.1.0"
edition = "2024"
description = "Clock slide for the vzglyd display engine — shows a 3D globe and local time"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vzglyd/VRX-64-clock"
homepage = "https://github.com/vzglyd/vzglyd"
keywords = ["vzglyd", "slide", "clock", "wasm", "ambient-display"]
categories = ["rendering", "embedded", "wasm"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vzglyd_slide = { package = "VRX-64-slide", git = "https://github.com/vzglyd/VRX-64-slide" }
glam = "0.32"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
once_cell = "1"
postcard = { version = "1", features = ["alloc", "use-std"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
